# deepgram-audiocodes-bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deepgram_audiocodes_bridge/: __init__.py  audio_router.py  audiocodes_handler.py  bridge.py  deepgram_handler.py
deepgram_audiocodes_bridge/types/: audiocodes.py
dg-ac-py-sdk/: audiocodes_handler.py  bridge.py  deepgram_handler.py
dg-ac-py-sdk/types/: __init__.py  audiocodes.py  deepgram.py
examples/01_basic/: README.md  server.py
examples/02_dtmf/: README.md  server.py
examples/03_auth/: README.md  server.py
examples/04_multi_agent/: README.md  server.py
tests/: conftest.py  test_audio_router.py  test_audiocodes_handler.py  test_bridge.py  test_deepgram_handler.py
