[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepgram-audiocodes-bridge"
version = "0.1.0"
description = "Bridges the AudioCodes Bot API to the Deepgram Voice Agent API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Deepgram" }]
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_generics = true
warn_return_any = true
